--- a/package.json
+++ b/package.json
@@ -4,22 +4,12 @@
   "description": "Dynamic CDN for front-end assets.",
   "version": "0.1.0",
   "homepage": "http://10up.com",
+  "repository": {},
   "author": {
     "name": "10up",
     "email": "sales@10up.com",
     "url": "http://10up.com"
   },
-  "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-concat": "~0.1.2",
-    "grunt-contrib-uglify": "~0.1.1",
-    "grunt-contrib-cssmin": "~0.6.0",
-    "grunt-contrib-jshint": "~0.1.1",
-    "grunt-contrib-nodeunit": "~0.1.2",
-    "grunt-contrib-watch": "~0.2.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-compress": "~0.5.2"
-  },
+  "devDependencies": {},
   "keywords": []
 }
