--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,18 @@
 {
-	"name":"Dynamic CDN",
-	"type":"wordpress-plugin",
-	"homepage":"https://github.com/ericmann/dynamic-cdn/",
-	"version":"0.2.1",
-	"license":"GPLv2",
-	"author": [
+	"name": "ericmann/dynamic-cdn",
+	"type": "wordpress-plugin",
+	"description": "Dynamic CDN for front-end assets.",
+	"homepage": "https://github.com/ericmann/dynamic-cdn/",
+	"version": "0.3.0",
+	"license": "GPLv2",
+	"authors": [
 		{
-			"name":"10up",
-			"homepage":"http://10up.com"
+			"name": "Eric Mann",
+			"homepage": "https://eamann.com"
 		}
 	],
-	"require":{
-		"php":">5.3.2",
-		"composer/installers":"v1.0.21"
+	"require": {
+		"php": ">5.3.2",
+		"composer/installers": "~1.0.25"
 	}
 }
