--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,19 @@
 	"authors": [
 		{
 			"name": "Eric Mann",
-			"homepage": "https://eamann.com"
+			"email": "eric@eamann.com",
+			"homepage": "https://eamann.com",
+			"role": "Developer"
 		}
 	],
 	"require": {
 		"php": ">5.3.2",
 		"composer/installers": "~1.0.25"
+	},
+	"require-dev": {
+		"10up/wp_mock": "^0.1.1",
+		"antecedent/patchwork": "1.4.0",
+		"phpunit/phpunit": "^4.8",
+		"satooshi/php-coveralls": "^1.0"
 	}
 }
