--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
 		"composer/installers": "~1.0.25"
 	},
 	"require-dev": {
+		"php": ">5.4",
 		"10up/wp_mock": "^0.1.1",
 		"antecedent/patchwork": "1.4.0",
 		"phpunit/phpunit": "^4.8",
