It seems Coveralls has changed instructions ...

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ before_script:
     - composer install --dev --no-interaction
 
 after_script:
-  - php vendor/bin/coveralls -v
+  - travis_retry php vendor/bin/coveralls -v
 
 script:
+    - mkdir -p build/logs
     - ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
