--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "wordpress-plugin",
 	"description": "Dynamic CDN for front-end assets.",
 	"homepage": "https://github.com/ericmann/dynamic-cdn/",
-	"version": "0.4.0-rc1",
+	"version": "0.4.1",
 	"license": "GPLv2",
 	"authors": [
 		{
