--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
 	"type": "wordpress-plugin",
 	"description": "Dynamic CDN for front-end assets.",
 	"homepage": "https://github.com/ericmann/dynamic-cdn/",
-	"version": "0.4.0-rc1",
+	"version": "0.4.0",
 	"license": "GPLv2",
 	"authors": [
 		{
@@ -14,11 +14,11 @@
 		}
 	],
 	"require": {
-		"php": ">5.3.2",
+		"php": ">5.6",
 		"composer/installers": "~1.0.25"
 	},
 	"require-dev": {
-		"php": ">5.4",
+		"php": ">7.0",
 		"10up/wp_mock": "^0.1.1",
 		"antecedent/patchwork": "1.4.0",
 		"phpunit/phpunit": "^4.8",
