--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,7 @@
 	},
 	"require-dev": {
 		"php": ">7.0",
-		"10up/wp_mock": "^0.1.1",
-		"antecedent/patchwork": "1.4.0",
-		"phpunit/phpunit": "^4.8",
+		"10up/wp_mock": "0.2.0",
 		"satooshi/php-coveralls": "^1.0"
 	}
 }
